# AttendanceApp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  register_attd_filetype.bat
docs/: FILE_FORMAT.md  USAGE.md
examples/: sample_roster.csv
include/: resource.h
resources/: app.manifest  app.rc
scripts/: generate_icons.ps1
src/: main.cpp  main.cpp.backup-combo-theme
